[gd_scene load_steps=3 format=3 uid="uid://combat_popup_scene"]

[ext_resource type="Script" path="res://scripts/ui/popups/CombatPopup.gd" id="1_combat"]
[ext_resource type="Theme" path="res://themes/main_theme.tres" id="2_theme"]

[node name="CombatPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_combat")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyInfo" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="EnemyName" type="Label" parent="BackgroundPanel/VBoxContainer/EnemyInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Nemico Sconosciuto"
horizontal_alignment = 1

[node name="EnemyHP" type="Label" parent="BackgroundPanel/VBoxContainer/EnemyInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "HP: 100/100"
horizontal_alignment = 2
modulate = Color(0.8, 0.2, 0.2, 1)

[node name="HSeparator" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="TurnIndicator" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ðŸ”´ TURNO GIOCATORE"
horizontal_alignment = 1
modulate = Color(0.2, 0.8, 0.2, 1)

[node name="HSeparator2" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="ActionsContainer" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="CombatLog" type="RichTextLabel" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=#00FF41]=== LOG COMBATTIMENTO ===[/color]"
fit_content = true
scroll_active = true
autowrap_mode = 3
scroll_following = true